<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_login_main"
    android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <ImageView
        android:id="@+id/login_iv_log"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/login_iv_log"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/et_bg_default"
            android:hint="@string/login_username"
            android:textColorHint="@color/etHintColor"
            android:paddingLeft="10dp"
            android:textSize="13sp"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg_default"
            android:textColorHint="@color/etHintColor"
            android:paddingLeft="10dp"
            android:digits="@string/digits"
            android:hint="@string/login_pwd"
            android:textSize="13sp"
            android:inputType="textPassword"
            android:lines="1" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg_default"
            android:textColor="@color/etHintColor"
            android:layout_gravity="bottom"
            android:text="登入"
            android:visibility="gone"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_helloybaby"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/login_btn_forgetPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="忘记密码?"
                android:textColor="#D4D4D4"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/login_btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="注册账号"
                android:textColor="#D4D4D4"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>